# bunnings-parser

./: .gitignore  Dockerfile  docker-compose.yaml  get_excel.py  main.py  payload.mako  pyproject.toml  test.json
parser_bb/: database.py  main.py
